scss/grid.scss
$black: #0a0a0a;
$white: #fefefe;
$solarized: #073642;
$almostblack: #202020;
$linkcolor: #1779ba;

// Theme
$background: $white;
$foreground: $almostblack;
$foreground-font: $white;

/* Font Awesome 4.7.0 */
//@import "font-awesome/font-awesome";

html {
    box-sizing: border-box;
  }
  *, *:before, *:after {
    box-sizing: inherit;
}
/*
svg {
    display: inline-flex;
    width: 1em;
    height: 1em;
    stroke-width: 0;
    stroke: currentColor;
    fill: currentColor;
    align-self: center;
    bottom: -0.125em;
    position: absolute;
}
*/

.svg-icon {
    display: inline-flex;
    align-self: center;
    position: relative;
    height: 1em;
    width: 1em;
}
  
.svg-icon svg {
    stroke-width: 0;
    stroke: currentColor;
    fill: currentColor;
    align-self: center;    
    height:1em;
    width:1em;
    bottom: -0.125em;
    position: absolute;
    &.history {
        width: 1.0625em;
    }    
}
  
  /* ==========================================
  Single-colored icons can be modified like so:
  .icon-name {
    font-size: 32px;
    color: red;
  }
  ========================================== */
  
  .icon-price-tags {
    width: 1.25em;
  }

a {
    color: $linkcolor;
    text-decoration: none;
    &:visited {
        color: complement($linkcolor);
    }
    &:hover {
        text-decoration: underline;
        color: lighten($linkcolor, 25);
    }
}

body {
    font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen-Sans, Ubuntu, Cantarell, "Helvetica Neue", Helvetica, Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol";
    margin: 0;
    font-size: 1.0em;
    line-height: 1.5;    
    background-color: $background;
    display: grid;
    grid-column-gap: 20px;
    grid-row-gap: 0;
    grid-template-areas: 
        "header"
        "tabs"
        "content"
        "nav"        
        "footer";
}

body > header {
    grid-area: header;
    max-height: 3.5rem;
    min-height: 3.5rem;
    > h1 {
        margin: 0;
    }
}

body > main {
    grid-area: content;
    background-color: $foreground;
    color: $foreground-font;
    padding: 1rem;
    > footer {
        text-align: right;
        color: #8a8a8a;
        font-size: 75%;
        > ul {
            list-style-type: none;
        }
    }
    > nav {
        float: right;
        background-color: darken($almostblack, 15);
        ul {
            margin: 0 1rem;
            list-style-type: upper-roman;
        }
    }
}
body > nav {
    grid-area: nav;
    ul {
        margin: 0;
        padding: 5px 0;
        list-style-type: none;
    }
    fieldset {
        margin: 10px;
    }
    
}
body > footer {
    grid-area: footer;
    text-align: center;
    font-size: 80%;
}

.stat {
    color: #8a8a8a;
}

.tabs {
    grid-area: tabs;
    //margin: 5px 0 0 0;
    margin: 0;
    padding: 0;
    list-style-type: none;
    align-self: end;
    display: flex;
    flex-wrap: wrap;
    flex-direction: row;
    li {
        padding-top: 5px;
        &.is-active { 
            a {
                background-color: $almostblack;
                color: $white;
            }
        }
        a {
            
            padding: 5px;
            margin: 0;
            //float: left;  
            //background-color: darken($almostblack, 5);
            border: 1px dashed $almostblack;
            &:hover {
                background-color: $almostblack;
            }            
        }
    }
}

.frontmatter {
    display: flex;
    flex-wrap: wrap;
    list-style-type: none;
    justify-content: space-between;
    background-color: lighten($foreground, 5);
    color: $foreground-font;
    padding: 0 10px;
    //margin-bottom: 5px;
    li {
        //border-left: 1px solid #ccc;
        //border-right: 1px solid #ccc;
        //padding: 0 1em;
        text-align: center;
    }
    li > p {
        font-size: 120%;
        margin: 0;
    }
}



td, th {
    border: 1px solid #999;
    padding: 0.5rem;
}

table {
    border-collapse: collapse;
}

#notification {
    position: fixed;
    top: 0em;
    left: 0;
    height: 35px;
    width: 100%;
    padding: 0 1em;
    overflow: hidden;
    background: #f9edbe;
    border-bottom: 1px solid #f0c36d;
    p {
        margin: 5px;
    }
}

#notification.anim {
    -webkit-transition: top 0.6s ease-out;  
    -moz-transition: top 0.6s ease-out;
    -ms-transition: top 0.6s ease-out;
    -o-transition: top 0.6s ease-out;
    transition: top 0.6s ease-out;
}
.notification.active {
    top: 0;
}
.notification .actions {
    margin-top: 0.5em;
}
.notification .btn {
    border: 1px solid #f0c36d;
    background: #f0c36d;
    color: #fff;
    display: inline-block;
    padding: 0.3em;
}

.notification .dismiss-btn {
    display: inline-block;
    margin-left: 1em;
}

@media all and (min-width: 50em) {
    .notification .msg {
        float: left;
        width: 70%;
    }
    .notification .actions {
        float: right;
        text-align: right;
        width: 30%;
        margin-top: -0.3em;
    }
}

.close-button {
    display: inline-block;
}

textarea#wikieditor {
    min-height: 20rem;
    width: 100%;
}

ul.tags {
    list-style-type: none;
    align-self: center;
    display: flex;
    flex-wrap: wrap;
    flex-direction: row;
    padding: 0;
    margin: 0;
    li {
        padding: 1px 5px;
        background-color: $solarized;
        border: none;
        border-radius: 10px 0;
        margin: 0 5px;
    }
}

span.label {
    padding: 0 5px;
    background-color: lighten($almostblack, 15);
}

pre, code {
    white-space:pre-wrap;
    background: $solarized;

}

.input-wrapper {
    display: flex;
    input[type=text] {
        flex: 1;
        box-sizing: border-box;
        width: 100%;
        min-width: 10px;
    }
}

// Tab definition
.preview-tabs {
    background: lighten($almostblack, 25);
    margin: 0;
    padding: 0;
    list-style-type: none;
    align-self: end;
    display: flex;
    flex-wrap: wrap;
    flex-direction: row;
    li {
        padding-top: 5px;
        a {
            display: inline-block;
            font-size: 1rem;
            position: relative;
            border: none;
            outline: none;
            vertical-align: bottom;
            cursor: pointer;
            background: lighten($almostblack, 25);
            color: $foreground-font;
            text-decoration: none;            
            padding: 5px;
            margin: 0;
            &:hover {
                background-color: $almostblack;
            }  
            &.is-active { 
                border-bottom: 2px solid white;
                background: darken($almostblack, 15);             

            }
        }

    }
}

.tabcontent {
    display: none;
}

.button {
    background-color: #4CAF50; /* Green */
    border: none;
    color: white;
    padding: 5px 15px;
    text-align: center;
    text-decoration: none;
    display: inline-block;
    font-size: 16px;
}

.button.delete {
    background-color: #f44336;
}

@media (min-width: 768px) {
    body {
      grid-template-areas: 
        "nav    header"
        "nav    tabs"
        "nav    content"
        "nav    footer";
        grid-template-columns: 240px 10fr;
        grid-template-rows: 50px 24px auto minmax(10px, 50px);
    }
    .tabs {
      flex-direction: row;
      li {
          margin: 0 10px 0 0;
        }
    }
    body > main {
        align-self: start;
    }
    .frontmatter {
        display: flex;
        flex-direction: row;
    }       
}

